tests/typechecker/should_fail/override_tock1.csp
tock = 1

f = 1+tock

g(x) = 1

Timed (g) {
    P = STOP
}
